--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -24,9 +24,22 @@ canvas{
 	top:0;
 	left:0;
 	z-index:1000;
-	background:#ccc;
-	font-size:12px;
-	color:#fff;
-	text-align: center;
-	line-height: 100vh;
+	background:#000;
+	span{
+		display:inline-block;
+		width:200px;
+		height:200px;
+		position: fixed;
+		left:50%;
+		top:50%;
+		margin-left:-100px;
+		margin-top:-100px;
+		font-size:22px;
+		background:url('../images/loading.png') no-repeat;
+		background-size:100% 100%;
+		background-position:center center;
+		text-align:center;
+		line-height:200px;
+		color:#666;
+	}
 }
